# EVE-Alert

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COCO.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: release.yml  tests.yml
.make/conf.d/: ci.mk  pre-commit.mk
docs/: ARCHITECTURE.md  FEATURES.md  INTEGRATIONS.md  PLUGINS.md
evealert/: __init__.py  bridge.py  constants.py  exceptions.py  hotkeys.py  plugin_api.py  statistics.py  tray.py
evealert/data/: ship_classes.py
evealert/manager/: alertmanager.py
evealert/menu/: config.py  image_manager.py  main.py  setting.py  statistics.py  threshold_editor.py
evealert/settings/: diagnostics.py  fields.py  helper.py  logger.py  stats_store.py  store.py  validator.py
evealert/tools/: combat_activity_store.py  crash_reporter.py  dscan_watcher.py  esi_auth.py  esi_standings.py  fleet_context.py  gatecamp.py  http_common.py  hunting_grounds.py  intel_analytics.py  intel_parser.py  intel_rollups.py  intel_watcher.py  kos_checker.py  link_markers.py  neighbor_monitor.py  net_safety.py  ocr_local.py  overlay.py  pilot_dossier.py  pilot_history_analytics.py  pilot_history_store.py  plugin_loader.py  push_notifier.py  r2z2.py  self_updater.py  space_profiles.py  threat_heatmap.py  threat_score.py  tts.py  universe.py  update_checker.py  vision.py  web_server.py  window_finder.py  windowscapture.py  wormhole.py  zkillboard.py
evealert/ui/: __init__.py  __main__.py  app.py  bug_reporter.py  config_dialog.py  crash_dialog.py  hotkey_edit.py  image_manager.py  intel_analytics_window.py  log_pane.py  main_window.py  notification_wizard.py  onboarding_wizard.py  plugin_manager_dialog.py  profile_manager.py  qt_bridge.py  region_overlay.py  settings_dialog.py  standings_manager.py  statistics_window.py  theme.py  theme.qss  threshold_editor.py  tray.py  update_dialog.py  watchlist_manager.py
examples/plugins/: csv_event_log.py  discord_rich_alarm.py  sound_per_tier.py
packaging/: SIGNING.md  WINGET.md  installer.iss
packaging/choco/: eve-alert.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
packaging/winget/: bluhayz.EVEAlert.installer.yaml  bluhayz.EVEAlert.locale.en-US.yaml  bluhayz.EVEAlert.yaml
tests/: __init__.py  test_alarm_dedup.py  test_alarm_pipeline.py  test_alertmanager.py  test_bench_vision.py  test_bug_reporter.py  test_combat_activity_store.py  test_crash_dialog.py  test_crash_reporter.py  test_diagnostics.py  test_dscan_watcher.py  test_esi_auth.py  test_esi_standings.py  test_example_plugins.py  test_fleet_context.py  test_gatecamp.py  test_hotkey_edit.py  test_hotkeys.py  test_http_common.py  test_hunting_grounds.py  test_intel_analytics.py  test_intel_analytics_window.py  test_intel_parser.py  test_intel_rollups.py  test_intel_watcher.py  test_kos_checker.py  test_log_pane.py  test_main_window_update_bar.py  test_multi_client.py  test_neighbor_monitor.py  test_ocr_local.py  test_pilot_dossier.py  test_pilot_history_analytics.py  test_pilot_history_store.py  test_plugin_api.py  test_plugin_loader.py  test_plugin_manager_dialog.py  test_push_notifier.py  test_r2z2.py  test_rearm.py  (+34 more)
tools/: bench_vision.py  soak_test.py
