[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "eve-alert-opensource"
description = "Simple Local Alert System for EvE Online"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Geuthur", email = "devgeuthur@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
    "dhooks-lite>=0.2",
    "httpx>=0.27",
    "mss==10.0.0",
    "numpy==2.1.2",
    "opencv-python==4.11.0.86",
    "pillow==12.2.0",
    "platformdirs>=4.0",
    "pynput==1.7.7",
    "PySide6>=6.7,<7",
    "sounddevice==0.5.1",
    "soundfile==0.12.1",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Install test tools: pip install ".[dev]"
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
]
# Text-to-speech uses Windows built-in System.Speech via PowerShell — no extra
# package needed.  pyttsx3 remains an optional fallback: pip install ".[tts]"
tts = [
    "pyttsx3>=2.90",
]
# Windows-only extras: pip install ".[windows]"
windows = [
    "pygetwindow>=0.0.9",
]
# OCR name detection (#98).  Windows builds use Windows.Media.Ocr (built-in,
# no extra install) via the winsdk package already in base dependencies.
# pytesseract is kept as an optional fallback for non-Windows environments.
ocr = [
    "pytesseract>=0.3.10",
]
# Install Windows build tools: pip install ".[build-windows]"
# winsdk is already in base deps (win32 marker); pytesseract kept as fallback.
build-windows = [
    "pyinstaller==6.11.0",
]
# Install macOS build tools: pip install ".[build-macos]"
build-macos = [
    "pyinstaller==6.11.0",
    "pytesseract>=0.3.10",
]
# Install all extras (use on macOS only): pip install ".[dev,build-macos]"
build = [
    "pyinstaller==6.11.0",
]

[project.urls]
Changelog = "https://github.com/bluhayz/EVE-Alert/blob/master/CHANGELOG.md"
Homepage = "https://github.com/bluhayz/EVE-Alert"
Source = "https://github.com/bluhayz/EVE-Alert"
Tracker = "https://github.com/bluhayz/EVE-Alert/issues"

[tool.hatch.build]
include = [
    "/evealert",
]

[tool.hatch.version]
path = "evealert/__init__.py"
